# zsw

./: .gitignore  .prettierrc  Cargo.toml  Cranky.toml  PKGBUILD  PKGBUILD-git  blend.json  clippy.toml  config.toml  config.yaml  image-loader-args.json  lints.toml  profile-small.json  profile.json  run.sh  rustfmt.toml
.cargo/: config.toml
displays/: full.toml  many.toml  quarter.toml
install/: zsw.desktop
panels/: cross-screen.toml  example1.yaml  full.toml  full.yaml  multiple.toml  multiple.yaml  quarter.toml  quarter.yaml
playlists/: example1.toml  example1.yaml  example2.toml  example2.yaml
profiles/: cross-screen.toml  default.toml  full.toml  many-quarter.toml  many.toml  slide.toml
shaders/panels/: fade.wgsl  none.wgsl
shaders/panels/fade/: frag.wgsl  stage_io.wgsl  uniforms.wgsl  vertex.wgsl
shaders/panels/fade/frag/: sample.wgsl
src/: app.rs  args.rs  egui.rs  gl_image.rs  image_loader.rs  image_uvs.rs  img.rs  logger.rs  main.rs  panel.rs  path_loader.rs  paths.rs  rect.rs  renderer.rs  sync.rs  util.rs  vertex.rs  wgpu.rs
src/app/: event_handler.rs  geometry.rs  renderer.rs  settings_window.rs
src/app/renderer/: settings_window.rs
src/image_loader/: load.rs  paths.rs  request.rs
src/img/: loader.rs  processor.rs  request.rs  uvs.rs
src/img/loader/: load.rs
src/img/loader/load/: downscale_cache.rs
src/img/processor/: process.rs
src/panel/: image.rs  panels.rs  profile.rs  renderer.rs
src/panel/renderer/: shader.wgsl  uniform.rs  vertex.rs
src/path_loader/: error.rs
src/paths/: distributer.rs  receiver.rs
src/renderer/: shader.wgsl  vertex.rs
src/sync/: once_channel.rs  priority_spmc.rs  rrc.rs
src/util/: scan_dir.rs  thread.rs
zsw/: Cargo.toml  build.rs
zsw-egui/: Cargo.toml
zsw-egui/src/: lib.rs
zsw-error/: Cargo.toml
zsw-error/src/: lib.rs
zsw-img/: Cargo.toml
zsw-img/src/: lib.rs  loader.rs  service.rs  uvs.rs
zsw-img/src/loader/: load.rs
zsw-img/src/service/: load.rs
zsw-input/: Cargo.toml
zsw-input/src/: lib.rs
zsw-panels/: Cargo.toml
zsw-panels/src/: image.rs  lib.rs  panel.rs  renderer.rs  state.rs
zsw-panels/src/renderer/: fade.wgsl  fade_in.wgsl  fade_out.wgsl  fade_white.wgsl  shader.wgsl  uniform.rs
zsw-playlist/: Cargo.toml
zsw-playlist/src/: lib.rs  manager.rs  receiver.rs  runner.rs
zsw-profiles/: Cargo.toml
zsw-profiles/src/: lib.rs  profile.rs
zsw-renderer/: Cargo.toml
zsw-renderer/src/: lib.rs
zsw-settings-window/: Cargo.toml
zsw-settings-window/src/: lib.rs
zsw-side-effect-macros/: Cargo.toml
zsw-side-effect-macros/src/: lib.rs
zsw-util/: Cargo.toml
zsw-util/src/: condvar_future.rs  display_wrapper.rs  dummy.rs  duration_display.rs  fetch_update.rs  fetch_update_lock.rs  frame_times.rs  future.rs  lib.rs  loadable.rs  lock.rs  master_barrier.rs  meetup.rs  oob.rs  rect.rs  resource.rs  resource_manager.rs  scan_dir.rs  service.rs  side_effect.rs  thread.rs  tpp.rs  tuple_collect_res.rs  unwrap_or_return.rs  walk_dir.rs
zsw-util/src/dummy/: async_mutex.rs  frame_times.rs  hash_map.rs
zsw-util/src/side_effect/: extse.rs
zsw-wgpu/: Cargo.toml
zsw-wgpu/src/: lib.rs  renderer.rs
zsw/shaders/panels/: fade.wgsl  none.wgsl  slide.wgsl
zsw/shaders/panels/fade/: frag.wgsl  stage_io.wgsl  vertex.wgsl
zsw/src/: app.rs  args.rs  config.rs  config_dirs.rs  dirs.rs  display.rs  egui.rs  egui_wrapper.rs  error.rs  image_loader.rs  img.rs  init.rs  logger.rs  main.rs  menu.rs  metrics.rs  panel.rs  panels.rs  paths.rs  playlist.rs  profile.rs  rayon_init.rs  rect.rs  settings_menu.rs  shared.rs  tokio_runtime.rs  trace.rs  util.rs  wgpu.rs  wgpu_wrapper.rs  window.rs
zsw/src/app/: event_handler.rs  image_provider.rs  profile_applier.rs  renderer.rs  resources.rs  services.rs  settings_window.rs
zsw/src/display/: displays.rs  geometry.rs  ser.rs
zsw/src/img/: loader.rs
zsw/src/init/: logger.rs  rayon_pool.rs  tokio_runtime.rs
zsw/src/init/logger/: pre_init.rs
zsw/src/logger/: pre_init.rs
zsw/src/menu/: displays.rs  metrics.rs  panels.rs
zsw/src/menu/metrics/: frame_times.rs
zsw/src/menu/metrics/frame_times/: render.rs  render_panels.rs
zsw/src/panel/: geometry.rs  image.rs  images.rs  loader.rs  panel.rs  panels.rs  playlist_player.rs  renderer.rs  ser.rs  ser_de.rs  state.rs
zsw/src/panel/images/: image.rs
zsw/src/panel/renderer/: shader.wgsl  uniform.rs  vertex.rs
zsw/src/panel/state/: fade.rs  none.rs  slide.rs
zsw/src/panel/state/fade/: images.rs
zsw/src/panels/: image.rs  panel.rs  renderer.rs  state.rs
zsw/src/panels/renderer/: uniform.rs
zsw/src/paths/: distributer.rs  receiver.rs
zsw/src/playlist/: loader.rs  player.rs  playlists.rs  ser.rs
zsw/src/profile/: profiles.rs  ser.rs
zsw/src/settings_menu/: displays.rs  metrics.rs  panels.rs  playlists.rs  profiles.rs
zsw/src/settings_menu/metrics/: frame_times.rs
zsw/src/settings_menu/metrics/frame_times/: render.rs  render_panels.rs
zsw/src/shared/: locker.rs  lockers.rs
zsw/src/shared/locker/: meetup.rs  mutex.rs  rwlock.rs
zsw/src/util/: scan_dir.rs  side_effect.rs  thread.rs
zsw/src/util/side_effect/: extse.rs
zsw/src/wgpu_wrapper/: renderer.rs
zsw2/: Cargo.toml
zsw2/src/: config.rs  egui_wrapper.rs  image_loader.rs  panel.rs  playlist.rs  rayon_init.rs  settings_menu.rs  tokio_runtime.rs  wgpu_wrapper.rs  window.rs
zsw2/src/panel/: image.rs  playlist_player.rs  renderer.rs  ser_de.rs  state.rs
