[package]
name    = "zsw-egui"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
zsw-util = { workspace = true }
zsw-wgpu = { workspace = true }

app-error           = { workspace = true }
egui                = { features = ["default_fonts"], workspace = true }
egui_wgpu_backend   = { workspace = true }
egui_winit_platform = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
winit               = { workspace = true }

[lints]
workspace = true
