[package]
edition = "2021"
name = "zsw-img"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-playlist = {path = "../zsw-playlist"}
zsw-util = {path = "../zsw-util"}

# Async
async-channel = "1.7.1"

# Math
cgmath = {version = "0.18.0", features = ["serde"]}

# Image
image = "0.24.5"

# Error handling
anyhow = "1.0.66"

# Logging
tracing = "0.1.37"
