[package]
edition = "2021"
name = "zsw-input"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Windowing
winit = "0.27.5"

# Async
futures = "0.3.25"

# Math
cgmath = {version = "0.18.0", features = ["serde"]}

# Threads
crossbeam = "0.8.2"
