[package]
edition = "2021"
name = "zsw-panels"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-img = {path = "../zsw-img"}
zsw-input = {path = "../zsw-input"}
zsw-util = {path = "../zsw-util"}
zsw-wgpu = {path = "../zsw-wgpu"}

# Windowing
winit = "0.26.1"

# Rendering
wgpu = {version = "0.12.0", features = ["serde", "replay"]}

# Async
futures = "0.3.21"

# Serialization
serde = {version = "1.0.132", features = ["derive"]}

# Math
cgmath = {version = "0.18.0", features = ["serde"]}

# Image
image = "0.23.14"

# Random
rand = "0.8.4"

# Error handling
anyhow = "1.0.52"

# Logging
tracing = "0.1.32"

# Util
bytemuck = {version = "1.7.3", features = ["derive"]}
num-rational = "0.4.0"

# Threads
crossbeam = "0.8.1"
parking_lot = {version = "0.12.0", features = ["deadlock_detection"]}
