[package]
edition = "2021"
name = "zsw-panels"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-img = { path = "../zsw-img" }
zsw-util = { path = "../zsw-util" }
zsw-wgpu = { path = "../zsw-wgpu" }

# Windowing
winit = "0.27.5"

# Rendering
wgpu = { version = "0.14.0", features = ["serde", "replay"] }

# Async
futures = "0.3.25"

# Math
cgmath = { version = "0.18.0", features = ["serde"] }

# Image
image = "0.24.5"

# Random
rand = "0.8.5"

# Error handling
anyhow = "1.0.66"

# Logging
tracing = "0.1.37"

# Util
bytemuck = { version = "1.12.3", features = ["derive"] }
num-rational = "0.4.1"
more-asserts = "0.3.1"

# Threads
crossbeam = "0.8.2"
parking_lot = "0.12.1"
