[package]
edition = "2021"
name = "zsw-playlist"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-side-effect-macros = {path = "../zsw-side-effect-macros"}
zsw-util = {path = "../zsw-util"}

# Async
async-channel = "1.6.1"
async-lock = "2.4.0"

# Random
rand = "0.8.4"
