[package]
edition = "2021"
name = "zsw-playlist"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-util = { path = "../zsw-util" }

# Async
async-channel = "1.7.1"
futures = "0.3.25"

# Util
parking_lot = "0.12.1"
crossbeam = "0.8.2"

# Logging
tracing = "0.1.37"

# Random
rand = "0.8.5"
