[package]
edition = "2021"
name = "zsw-profiles"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-panels = {path = "../zsw-panels"}
zsw-playlist = {path = "../zsw-playlist"}
zsw-util = {path = "../zsw-util"}

# Async
futures = "0.3.21"

# Serialization
serde = {version = "1.0.132", features = ["derive"]}

# Error handling
anyhow = "1.0.52"

# Logging
tracing = "0.1.32"

# Threads
parking_lot = {version = "0.12.0", features = ["deadlock_detection"]}
