[package]
edition = "2021"
name = "zsw-profiles"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-util = { path = "../zsw-util" }

# Async
futures = "0.3.25"

# Serialization
serde = { version = "1.0.147", features = ["derive"] }

# Error handling
anyhow = "1.0.66"

# Logging
tracing = "0.1.37"

# Threads
parking_lot = "0.12.1"
