[package]
edition = "2021"
name = "zsw-renderer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-egui = {path = "../zsw-egui"}
zsw-img = {path = "../zsw-img"}
zsw-input = {path = "../zsw-input"}
zsw-panels = {path = "../zsw-panels"}
zsw-util = {path = "../zsw-util"}
zsw-wgpu = {path = "../zsw-wgpu"}

# Windowing
winit = "0.27.5"

# Gui
egui_wgpu_backend = "0.20.0"

# Async
futures = "0.3.25"
pollster = "0.2.5"
tokio = "1.22.0"

# Error handling
anyhow = "1.0.66"

# Logging
tracing = "0.1.37"
