[package]
edition = "2021"
name = "zsw-settings-window"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-egui = {path = "../zsw-egui"}
zsw-panels = {path = "../zsw-panels"}
zsw-playlist = {path = "../zsw-playlist"}
zsw-profiles = {path = "../zsw-profiles"}
zsw-renderer = {path = "../zsw-renderer"}
zsw-side-effect-macros = {path = "../zsw-side-effect-macros"}
zsw-util = {path = "../zsw-util"}
zsw-wgpu = {path = "../zsw-wgpu"}

# Windowing
winit = "0.26.1"

# Gui
egui = "0.16.1"
epi = "0.16.0"

# Async
async-channel = "1.6.1"
pollster = "0.2.4"

# Math
cgmath = {version = "0.18.0", features = ["serde"]}

# Error handling
anyhow = "1.0.52"

# Logging
log = "0.4.14"

# Filesystem
native-dialog = "0.6.3"

# Threads
crossbeam = "0.8.1"
