[package]
edition = "2021"
name = "zsw-settings-window"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-egui = { path = "../zsw-egui" }
zsw-panels = { path = "../zsw-panels" }
zsw-playlist = { path = "../zsw-playlist" }
zsw-profiles = { path = "../zsw-profiles" }
zsw-renderer = { path = "../zsw-renderer" }
zsw-util = { path = "../zsw-util" }
zsw-wgpu = { path = "../zsw-wgpu" }

# Windowing
winit = "0.27.5"

# Gui
egui = { version = "0.19.0", features = ["default_fonts"] }
epi = "0.17.0"

# Async
async-channel = "1.7.1"
futures = "0.3.25"
pollster = "0.2.5"

# Math
cgmath = { version = "0.18.0", features = ["serde"] }

# Error handling
anyhow = "1.0.66"

# Logging
tracing = "0.1.37"

# Filesystem
native-dialog = "0.6.3"

# Threads
crossbeam = "0.8.2"
parking_lot = "0.12.1"
