[package]
edition = "2021"
name = "zsw-util"
version = "0.1.0"

[dependencies]
cgmath = { workspace = true, features = ["serde"] }
duplicate = { workspace = true }
extend = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zutil-app-error = { workspace = true }

[lints]
workspace = true
