[package]
edition = "2021"
name = "zsw-wgpu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Zsw
zsw-util = {path = "../zsw-util"}

# Windowing
winit = "0.27.5"

# Rendering
wgpu = {version = "0.14.0", features = ["serde", "replay"]}

# Async
futures = "0.3.25"
pollster = "0.2.5"

# Error handling
anyhow = "1.0.66"

# Logging
tracing = "0.1.37"

# Threads
crossbeam = "0.8.2"
parking_lot = "0.12.1"
