[package]
name = "zsw-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
tokio = "1.26.0"
tracing = "0.1.37"
wgpu = "0.14.2"
winit = "0.27.5"
zsw-error = { version = "0.1.0", path = "../zsw-error" }
