[package]
name    = "zsw-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
zsw-util = { workspace = true }

app-error = { workspace = true }
image     = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }
wgpu      = { workspace = true }
winit     = { workspace = true }

[lints]
workspace = true
