[package]
name    = "zsw"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
zsw-egui = { workspace = true }
zsw-util = { workspace = true }
zsw-wgpu = { workspace = true }

async-channel      = { workspace = true }
bytemuck           = { features = ["derive"], workspace = true }
cgmath             = { workspace = true }
clap               = { features = ["derive"], workspace = true }
console-subscriber = { optional = true, workspace = true }
crossbeam          = { workspace = true }
directories        = { workspace = true }
egui               = { features = ["default_fonts"], workspace = true }
futures            = { workspace = true }
image              = { workspace = true }
itertools          = { workspace = true }
naga_oil           = { workspace = true }
num-rational       = { workspace = true }
opener             = { workspace = true }
rand               = { workspace = true }
rayon              = { workspace = true }
serde              = { features = ["derive"], workspace = true }
serde_with         = { workspace = true }
tokio              = { features = ["full", "tracing"], workspace = true }
toml               = { workspace = true }
tracing            = { features = ["log"], workspace = true }
tracing-log        = { workspace = true }
tracing-subscriber = { features = ["env-filter"], workspace = true }
wgpu               = { features = ["naga-ir"], workspace = true }
winit              = { workspace = true }
zutil-app-error    = { workspace = true }
zutil-cloned       = { workspace = true }

[features]

tokio-console     = ["dep:console-subscriber"]
locker-validation = []

[lints]
workspace = true
