[package]
name    = "zsw"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
zsw-egui = { workspace = true }
zsw-util = { workspace = true }
zsw-wgpu = { workspace = true }

app-error          = { workspace = true }
bytemuck           = { features = ["derive"], workspace = true }
cgmath             = { workspace = true }
chrono             = { workspace = true }
clap               = { features = ["derive"], workspace = true }
console-subscriber = { optional = true, workspace = true }
crossbeam          = { workspace = true }
derive_more        = { features = ["full"], workspace = true }
directories        = { workspace = true }
egui               = { features = ["default_fonts"], workspace = true }
egui_plot          = { workspace = true }
futures            = { workspace = true }
image              = { workspace = true }
itertools          = { workspace = true }
naga               = { features = ["deserialize"], workspace = true }
num-rational       = { workspace = true }
opener             = { workspace = true }
rand               = { workspace = true }
serde              = { features = ["derive"], workspace = true }
serde_json         = { workspace = true }
serde_with         = { workspace = true }
strum              = { features = ["derive"], workspace = true }
tokio              = { features = ["full", "tracing"], workspace = true }
toml               = { workspace = true }
tracing            = { features = ["log"], workspace = true }
tracing-log        = { workspace = true }
tracing-subscriber = { features = ["env-filter"], workspace = true }
wgpu               = { features = ["naga-ir"], workspace = true }
winit              = { workspace = true }
zutil-cloned       = { workspace = true }

[build-dependencies]
app-error  = { workspace = true }
naga_oil   = { workspace = true }
itertools  = { workspace = true }
naga       = { workspace = true, features = ["serialize"] }
serde_json = { workspace = true }

[features]

tokio-console = ["dep:console-subscriber"]

[lints]
workspace = true
